--- a/docs/基础/动态规划/2.md
+++ b/docs/基础/动态规划/2.md
@@ -1,8 +1,8 @@
-上楼梯：
+## 上楼梯
 
 - 最大方案数量： `dp[i] = dp[i−1]+dp[i−2]`
 
-  [62. 不同路径.md](..\..\题\leetcode\62. 不同路径.md): `dp[n][m]`，没有业务需求，就可以一一对应。`dp[n][m]`表示从(0,0)到(n,m)的方案总数。 
+  [小米25模拟爬楼梯.md](..\..\题\笔试\真题\小米25模拟爬楼梯.md) 
 
 - 最小代价：`dp[i] = min(dp[i - 1], dp[i - 2]) + cost[i];`
 
@@ -16,11 +16,11 @@
 
 
 
-走格子
+## 走格子
 
 ​	最大方案数量 
 
-​		[62. 不同路径.md](..\..\题\leetcode\62. 不同路径.md) : `dp[i][j] = dp[i-1][j] + dp[i][j-1]`
+​		[62. 不同路径.md](..\..\题\leetcode\62. 不同路径.md) : `dp[i][j] = dp[i-1][j] + dp[i][j-1]`。`dp[n][m]`，没有业务需求，就可以一一对应。`dp[n][m]`表示从(0,0)到(n,m)的方案总数。 
 
 ​		 [63. 不同路径 II.md](..\..\题\leetcode\63. 不同路径 II.md) ：指定数组的路障
 
@@ -39,3 +39,6 @@
 base case
 
 递推公式
+
+## 零钱兑换
+
