--- a/docs/基础/字符串/字符串匹配.md
+++ b/docs/基础/字符串/字符串匹配.md
@@ -1,11 +1,4 @@
-- [多个字符串的最长公共前缀](#多个字符串的最长公共前缀)
-- [匹配子串](#匹配子串)
-  - [暴力匹配](#暴力匹配)
-  - [KMP](#kmp)
-  - [重复的子字符串](#重复的子字符串)
-- [最长回文子串](#最长回文子串)
-- [最小覆盖子串](#最小覆盖子串)
-
+[toc]
 
 ---
 ## 多个字符串的最长公共前缀
@@ -122,7 +115,7 @@ class Solution {
 
 两种回文：单个下标i开始，两个下标i和i+1开始。
 
-![alt text](../../images/image-81.png)
+![alt text](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images/202410131158815.png)
 ```java
 // 5.最长回文子串
 class Solution {
