--- a/docs/基础/排序/01_冒泡.md
+++ b/docs/基础/排序/01_冒泡.md
@@ -51,10 +51,9 @@ public void sort(int[] nums, int i) {
 ![alt text](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images/202406201437851.png)
 ```java
 public int[] sortArray(int[] nums) {
-    // 让下一轮的 `i = x`
-    for(int i = nums.length - 1; i >= 1;){
-        int x = 0;		// 等于0，则直接退出for循环
-        for(int j = 0 ; j < i; j++){
+    for(int i = nums.length - 1; i >= 1;){		// 不写 i--
+        int x = 0;		// 控制的是每轮的边界 i
+        for(int j = 0; j < i; j++){
             if(nums[j] > nums[j+1]){
                 swap(nums, j , j+1);
                 x = j;
