--- a/docs/基础/树/计算题.md
+++ b/docs/基础/树/计算题.md
@@ -2,7 +2,7 @@
 
 层数为 k 的二叉树至多有 $2^k-1$个结点
 
-层数=深度（该路径经过的节点），高度=层数-1。
+层数=深度（该路径经过的节点，深层），高度=层数-1。
 
 ​	高度（树的高度是指根到叶子节点的最长路径的**边数**，根的高度为0），**一楼不能算高楼**
 
