--- a/docs/背/背java/数组.md
+++ b/docs/背/背java/数组.md
@@ -1,4 +1,8 @@
+## return 数组
+
 `return new int[]{1,2,3};`
+
+## 非基本类型，动态初始化
 
 ```java
 char[][] cs = new char[strs.length][];      // 动态初始化
@@ -7,12 +11,51 @@ for (int i = 0; i < strs.length; i++) {
 }
 ```
 
+## 数组排序
+
+基本类型：
+
 ```java
-// sort, self-defined sort
-Arrays.sort(arr);		// 可以是int
+Arrays.sort(arr);		// 基本类型
+Arrays.sort(arr, 0, n);		// 基本类型, [0, n)
+```
+
+
+
+自定义排序规则：必须是 非基本类型（对象） T 
+
+```java
+Arrays.sort(arr);		// 基本类型
+
 Integer[] arr2 = Arrays.stream(arr).boxed().toArray(Integer[]::new);
 Arrays.sort(arr2, (a,b)-> a-b);		// 必须是T[]		sort(T[] a, Comparator<? super T> c) 
+```
 
+```java
+Arrays.sort(arr2, (a,b)-> {
+    if( a < b ){
+        return -1;		// a 排在 b 前
+    }else if ( a == b ){
+        return 0;		// ab相等
+    }else{
+        return 1;		// b 排在 a 前
+    }
+});	
+```
+
+```java
+// 字符串不用处理：a.compartTo()，已经做到小长度在前、同长度小字典序在前。
+String[] s = new String[]{"123", "45678", "456", "0"};
+Arrays.sort(s);
+System.out.println(Arrays.toString(s));     // [0, 123, 456, 45678]
+
+Arrays.sort(s, (a,b)-> -a.compareTo(b));
+System.out.println(Arrays.toString(s));     // [45678, 456, 123, 0]
+```
+
+## copy
+
+```java
 // copy
 int[] arr2 = Arrays.copyOf(arr, 3);
 int[] arr3 = Arrays.copyOf(arr, arr.length);
@@ -22,17 +65,22 @@ int[] arr5 = Arrays.copyOfRange(arr, 0, arr.length);
 
 int[] brr = new int[3];
 System.arraycopy(arr, 0, brr, 0, 3);
+```
 
+## equals
+
+```java
 // equals
 boolean flag = Arrays.equals(arr, brr);
 ```
 
+## fill
+
 ```java
 // 一维数组
-// fill, fill range
 int[] arr = new int[10];
-Arrays.fill(arr, -1);
-Arrays.fill(0, 3, -1);
+Arrays.fill(arr, -1);			// all
+Arrays.fill(arr, 0, 3, -1);		// [0, 3)
 
 // 二维数组
 int[][] arr2 = new int[10][10];
