--- a/docs/题/leetcode/54. 螺旋矩阵.md
+++ b/docs/题/leetcode/54. 螺旋矩阵.md
@@ -1,8 +1,14 @@
+难点在于混淆 坐标轴方向。
+
+（1）不要用 dx dy 的表示方法，而是要用 i j 的直观。x和y坐标轴是x向下为正、y向右为正。
+
+（2）di、dj的初始化是螺旋的移动方向，[i+0, j+1]是向右，这可比 x y更不容出错。
+
 ```java
 // 54. 螺旋矩阵
 class Solution {
-    int[] dx = new int[] { 0, 1, 0, -1 };
-    int[] dy = new int[] { 1, 0, -1, 0 };
+    int[] di = new int[] { 0, 1, 0, -1 };
+    int[] dj = new int[] { 1, 0, -1, 0 };
 
     public List<Integer> spiralOrder(int[][] matrix) {
         List<Integer> result = new ArrayList<>();
@@ -11,19 +17,20 @@ class Solution {
         int size = m * n;
         boolean[][] vis = new boolean[m][n];
         int count = 0;
-        int bx = 0, by = 0;
+        int bi = 0, bj = 0;
         int control = 0;
         while (count < size) {
-            vis[bx][by] = true;
-            result.add(matrix[bx][by]);
-            // 临时探索
-            int bx_temp = bx + dx[control];
-            int by_temp = by + dy[control];
-            if (bx_temp == m || by_temp == n || by_temp == -1 || vis[bx_temp][by_temp] == true) {
+            vis[bi][bj] = true;
+            result.add(matrix[bi][bj]);
+            // 尝试越界
+            int bi_temp = bi + di[control];
+            int bj_temp = bj + dj[control];
+            if (bi_temp == m || bi_temp == -1 || bj_temp == n || bj_temp == -1 || vis[bi_temp][bj_temp] == true) {
                 control = (control + 1) % 4;
             }
-            bx += dx[control];
-            by += dy[control];
+            // 真正
+            bi += di[control];
+            bj += dj[control];
             count++;
         }
         return result;
