--- a/docs/高级/前缀和/前缀和.md
+++ b/docs/高级/前缀和/前缀和.md
@@ -1,9 +1,5 @@
 ## 一维前缀和
 
-![image-20240927153932012](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images/202409271539077.png)
-
-
-
 ### 前缀和的含义
 
 sums[i]表示[0...i-1]的子数组的和（不包含自己），sums[0]=0 表示一个空数组的元素和。
@@ -30,7 +26,78 @@ $$\displaystyle \sum_{j=left}^{right}\textit{nums}[j] = sums[right+1] - sums[lef
 
 答：如果要计算的子数组是`[0...j]`，那么就是sums[j+1]-sums[0]。如果不定义 sums[0]=0，就必须特判 left=0 的情况了。
 
+![image-20240927153932012](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images/202409271539077.png)
+
+```java
+class NumArray {
+    int[] sums;
+    int[] nums;
+    public NumArray(int[] nums) {
+        this.nums = nums;
+        sums = new int[nums.length + 1];
+        sums[0] = 0;
+        for(int i = 0; i <nums.length; i++){
+            sums[i+1] = sums[i] + nums[i];
+        }
+    }
+    
+    public void update(int index, int val) {
+        int delta = val - nums[index];
+        nums[index] = val;
+        for(int i = index; i < nums.length; i++){
+            sums[i + 1] += delta;			// nums对应的sums是+1
+        }
+    }
+    
+    public int sumRange(int left, int right) {
+        return sums[right + 1] - sums[left];
+    }
+}
+```
+
+
+
 ## 二维前缀和
+
+![image-20241011230643655](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images/202410112306735.png)
+
+```java
+// 304. 二维区域和检索 - 矩阵不可变
+// 308
+class NumMatrix {
+    int[][] sums;
+    int[][] nums;
+
+    public NumMatrix(int[][] matrix) {
+        this.nums = matrix;
+        int m = matrix.length;
+        int n = matrix[0].length;
+        sums = new int[m + 1][n + 1];
+        for (int i = 0; i < m; i++) {
+            for (int j = 0; j < n; j++) {
+                sums[i + 1][j + 1] = sums[i + 1][j] + sums[i][j + 1] - sums[i][j] + matrix[i][j];
+
+            }
+        }
+    }
+
+    // 返回左上角在 (r1,c1) 右下角在 (r2,c2) 的子矩阵元素和
+    public int sumRegion(int r1, int c1, int r2, int c2) {
+        return sums[r2 + 1][c2 + 1] - sums[r2 + 1][c1] - sums[r1][c2 + 1] + sums[r1][c1];
+    }
+
+    // 更新：田字形。右下角矩形的面积=整体面积-左边面积-上面面积+左上面积
+    public void update(int r, int c, int val) {
+        int delta = val - nums[r][c];
+        nums[r][c] = val;
+        for (int i = r; i < nums.length; i++) {
+            for (int j = c; j < nums[0].length; j++) {
+                sums[i + 1][j + 1] += delta;
+            }
+        }
+    }
+}
+```
 
 ![alt text](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images202406122243744.png)
 
