--- a/docs/基础/字符串/题.md
+++ b/docs/基础/字符串/题.md
@@ -1,1 +1,3 @@
  [395. 至少有 K 个重复字符的最长子串.md](..\..\题\leetcode\395. 至少有 K 个重复字符的最长子串.md) 
+
+一直删除相邻重复字符： [小米25模拟字符串操作.md](..\..\题\笔试\真题\小米25模拟字符串操作.md) 
