--- a/docs/题/leetcode/307. 区域和检索 - 数组可修改.md
+++ b/docs/题/leetcode/307. 区域和检索 - 数组可修改.md
@@ -172,3 +172,76 @@ private int range(int left, int right, int node, int s, int e) {
 }
 ```
 
+## ？？？
+
+```java
+class NumArray {
+    private int[] segmentTree;
+    private int n;
+
+    public NumArray(int[] nums) {
+        n = nums.length;
+        segmentTree = new int[nums.length * 4];
+        build(0, 0, n - 1, nums);
+    }
+
+    public void update(int index, int val) {
+        change(index, val, 0, 0, n - 1);
+    }
+
+    public int sumRange(int left, int right) {
+        return range(left, right, 0, 0, n - 1);
+    }
+
+    private void build(int node, int s, int e, int[] nums) {
+        if (s == e) {
+            segmentTree[node] = nums[s];
+            return;
+        }
+        int m = s + (e - s) / 2;
+        build(node * 2 + 1, s, m, nums);
+        build(node * 2 + 2, m + 1, e, nums);
+        segmentTree[node] = segmentTree[node * 2 + 1] + segmentTree[node * 2 + 2];
+    }
+
+    private void change(int index, int val, int node, int s, int e) {
+        if (s == e) {
+            segmentTree[node] = val;
+            return;
+        }
+        int m = s + (e - s) / 2;
+        if (index <= m) {
+            change(index, val, node * 2 + 1, s, m);
+        } else {
+            change(index, val, node * 2 + 2, m + 1, e);
+        }
+        segmentTree[node] = segmentTree[node * 2 + 1] + segmentTree[node * 2 + 2];
+    }
+
+    private int range(int left, int right, int node, int s, int e) {
+        // 被查询区间包裹
+        if (left <= s && e <= right) {
+            return segmentTree[node];
+        }
+
+        if (right < s || e < left) {
+            return 0;
+        }
+
+        // 向下更新
+        // pushdown(idx);
+
+        // 左右子树中查询
+        int m = s + e >>> 1;
+        int sum = 0;
+        if (left <= m) {
+            sum += range(left, right, node * 2 + 1, s, m);
+        }
+        if (right > m) {
+            sum += range(left, right, node * 2 + 2, m + 1, e);
+        }
+        return sum;
+    }
+}
+```
+
