--- a/docs/基础/动态规划/背包问题.md
+++ b/docs/基础/动态规划/背包问题.md
@@ -144,31 +144,34 @@ public int pack01(int[] w, int[] v, int n, int cap) {
 
 ### 🚀(n+1) x (cap+1) 推荐
 
-对着每个物品（包括0个物品），进行[0, 最大背包容量]的依次计算。得到 (n+1) x (cap+1) 的数组。
+对着每个物品，进行 `[0, 最大背包容量]` 的依次计算。得到 (n+1) x (cap+1) 的数组。
 
-`dp[i][c]`表示前i个物品（`w[0...i-1]`）一起考虑后对应的不同容量背包`[0...cap]`下的最大价值。
+背包必须包含0和n，0表示没装东西，n表示最大容量
 
-
-
-边界条件 
-
-让第一个物品是`0||v[0]`，让其归入到递推公式中，则`列首dp[x][0]=0，首行dp[0][x]=0`（刚好都是默认0）
+`dp[i][c]`表示前i个物品（`w[0...i-1]`）一起考虑后对应的不同容量背包`[0...c]`下的最大价值。
 
 
 
-递推公式 （判断和公式中的w和v是i-1）
+边界条件（刚好都是默认0）
+
+​	背包为0：`列首dp[x][0]=0`，
+
+​	第1个物品装得下时`dp[i][c] = Math.max(dp[i - 1][c], dp[i - 1][c - w[i-1]] + v[i-1])`会去判断第0个边界物品: 则让 `首行dp[0][x]=0`
+
+
+
+递推公式 
 
 $$
 dp[i][c] =  \begin{cases}  dp[i-1][c], & \text{if } c < w[i-1]\\ \max(dp[i-1][c], dp[i-1][c - w[i-1]] + v[i-1]), & \text{if } c \geq w[i-1] \end{cases}
 $$
 
+- dp[i]是尝试装入第i个物品的dp结果。
+- w和v是i-1，因为第i个物品的索引是i-1.
+
 
 
 最终返回的是`dp[n][cap]`（不是`[n-1]`）
-
-​	实际物品可以从1开始，[1, n]；
-
-​	背包必须包含0和n，0表示没装东西，n表示最大容量。
 
 ```java
 public int pack01(int[] w, int[] v, int cap) {
@@ -194,8 +197,42 @@ public int pack01(int[] w, int[] v, int n, int cap) {
     int[] dp = new int[cap + 1];		// dp的范围是背包的最大容量
     // 【两个循环：一个遍历物品，一个【倒序】遍历背包大小】
     for (int i = 1; i <= n; i++) {
-        for (int c = cap; c >= w[i-1]; c--) {		// 把if判断融合进去：背白装不下的，就不变
+        for (int c = cap; c >= w[i-1]; c--) {		// c >= w[i-1] 把if判断融合进去：背白装不下的，就不变
             dp[c] = Math.max(dp[c], dp[c - w[i-1]] + v[i-1]);
+        }
+    }
+    return dp[cap];
+}
+```
+
+### i+1
+
+```java
+public int pack01(int[] w, int[] v, int cap) {
+    int n = w.length;
+    int[][] dp = new int[n + 1][cap + 1];	// n + 1个物品，cap+1个容量【dp的范围是背包的最大容量】
+    // 【两个循环：一个遍历物品，一个遍历背包大小】
+    for (int i = 0; i < n; i++) {		// 从第1个物品开始，包括n
+        for (int c = 1; c <= cap; c++) {
+            if (c >= w[i]) {
+                // 装的下：不选和选物品 i 这两种方案的较大值
+                dp[i + 1][c] = Math.max(dp[i][c], dp[i][c - w[i]] + v[i]);
+            } else{  
+	            // 装不下：则不选物品 i
+                dp[i + 1][c] = dp[i][c];
+            }
+        }
+    }
+    return dp[n][cap];
+}
+
+/* 0-1 背包：空间优化后的动态规划 */
+public int pack01(int[] w, int[] v, int n, int cap) {
+    int[] dp = new int[cap + 1];		// dp的范围是背包的最大容量
+    // 【两个循环：一个遍历物品，一个【倒序】遍历背包大小】
+    for (int i = 0; i < n; i++) {
+        for (int c = cap; c >= w[i]; c--) {		// c >= w[i] 把if判断融合进去：背白装不下的，就不变
+            dp[c] = Math.max(dp[c], dp[c - w[i]] + v[i]);
         }
     }
     return dp[cap];
@@ -323,7 +360,7 @@ public long packInfinity(int[] w, int[] v, int n, int cap) {
     long[] dp = new long[cap + 1];
     // 【正序】遍历背包
     for (int i = 1; i <= n; i++) {
-        for (int c = w[i-1]; c <= cap; c++) {		// 把if判断的小于则保持不变，融合进去
+        for (int c = w[i-1]; c <= cap; c++) {		// int c = w[i-1] 把if判断的小于则保持不变，融合进去
             dp[c] = Math.max(dp[c], dp[c - w[i-1]] + v[i-1]);
         }
     }
