--- a/docs/基础/排序/排序.md
+++ b/docs/基础/排序/排序.md
@@ -41,11 +41,11 @@ private void swap(int[] nums, int i, int j){
 
 
 
-快速：根据哨兵排序 partition，再自身递归左右子区间。
+快速：以哨兵值排序当前区间，左边的小于哨兵，右边的大于哨兵，再以哨兵位置递归左边子区间和右边子区间
 
-​	（1）一个partition工具函数来获得哨兵和排序，一个quickSort递归函数。
+​	（1）一个quickSort递归函数，一个partition根据哨兵排序和返回哨兵位置，
 
-​	（2）quickSort p不参与下一次递归 `[i, p-1], [p+1, j]`，quickSort 只剩一个元素 i>=j 就退出，
+​	（2）quickSort的哨兵位置不参与下一次递归 `[i, p-1], [p+1, j]`，quickSort 只剩一个元素 i>=j 就退出，
 
 ​	（3）partion 的while循环 i < j 起码两个元素
 
