--- a/docs/基础/数学/取模.md
+++ b/docs/基础/数学/取模.md
@@ -23,3 +23,31 @@ for(int i = 0;  i < 10; i++){
 4 % 6 = 4：如果a<b，则a%b=a
 
 6 % 4 = 2.
+
+## 取位
+
+123 → 3、2、1
+
+👉321
+
+```java
+int res = 0;
+int count = 0;
+while(n != 0){
+	res = res * 10 + n % 10;
+    n /= 10;
+}
+```
+
+👉123
+
+```java
+int res = 0;
+int count = 0;
+while(n != 0){
+    res = n % 10 * (int)(Math.pow(10, count)) + res;
+    count++;
+    n /= 10;
+}
+```
+
