--- a/docs/基础/链表/链表.md
+++ b/docs/基础/链表/链表.md
@@ -196,3 +196,13 @@ class Solution {
 环
 
 ​	 [141. 环形链表.md](..\..\题\leetcode\141. 环形链表.md) 
+
+
+
+
+
+链表进位：
+
+​	 [2. 两数求和.md](..\..\题\leetcode\2. 两数求和.md) ：逆序
+
+​	
