--- a/docs/题/leetcode/7. 整数反转.md
+++ b/docs/题/leetcode/7. 整数反转.md
@@ -4,15 +4,19 @@
 
 110→11：无须特别处理，res是0 * 10 还是0
 
-溢出：
+溢出 res 所能表达的最大数 `res * 10 + x %10` ：
 
-​	最大：res * 10 + x %10 > 2147483647。
+​	最大溢出：res * 10 + x %10 > MAX（2147483647）。分为：
 
-​			那么 res > MAX / 10 和 res == MAX / 10 且 x % 10 > 7
+​		个位之上溢出 res > MAX / 10
 
-​	最小：res * 10 + x %10 < -2147483648
+​		个位溢出 res == MAX / 10 且 x % 10 > 7
 
-​			那么 res < MIN / 10 和 res == MIN / 10 且 x % 10 < -8
+​	最小溢出：res * 10 + x %10 < MIN（-2147483648）。分为：
+
+​		个位之上溢出 res < MIN / 10
+
+​		个位溢出 res == MIN / 10 且 x % 10 < -8
 
 ```java
 class Solution {
