--- a/docs/基础/动态规划/股票.md
+++ b/docs/基础/动态规划/股票.md
@@ -1,90 +1,35 @@
 [toc]
 
-## 一次
+> 在每一天，你可以决定是否购买和/或出售股票。你在任何时候 **最多** 只能持有 **一股** 股票。你也可以先购买，然后在 **同一天** 出售。
+
+
+
+ [122. 买卖股票的最佳时机 II.md](..\..\题\leetcode\122. 买卖股票的最佳时机 II.md) : 动态规划；贪心
+
+
+
+
+
+> 你只能选择 **某一天** 买入这只股票，并选择在 **未来的某一个不同的日子** 卖出该股票。设计一个算法来计算你所能获取的最大利润。
 
 误区：最大值-最小值，顺序是会颠倒的！
 
-```java
-// 121. 买卖股票的最佳时机
-class Solution {
-    public int maxProfit(int[] prices) {
-        int profit = 0; // 最差一次都不卖
-        int i = 0;  // 第1天买入
-        // 从第二天开始
-        for(int j = 1; j < prices.length; j++){
-            profit = Math.max(profit, prices[j] - prices[i]);
-            // 选择最低价格的那天买入
-            if(prices[j] < prices[i]){
-                i = j;
-            }
-        }
-        return profit;
-    }
-}
-```
-```java
-// 121. 买卖股票的最佳时机
-class Solution {
-    public int maxProfit(int[] prices) {
-        int profit = 0;
-        int minPrice = prices[0];
-        // 从第二天开始也行，因为第一天 profit, minPrice 维持原值
-        for(int price: prices){
-            profit = Math.max(profit, price - minPrice);
-            minPrice = Math.min(price, minPrice);
-        }
-        return profit;
-    }
-}
-```
+利益 = 当前的值 - 历史最小值。不断更新它
 
-## 两次
-![alt text](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images/202408231648842.png)
-```java
-// 123. 买卖股票的最佳时机 III
-class Solution {
-    public int maxProfit(int[] prices) {
-        int buy1 = -prices[0];
-        int buy2 = -prices[0];
-        int sell1 = 0;
-        int sell2 = 0;
-        for(int i = 0; i < prices.length; i++){
-            buy1 = Math.max(buy1, -prices[i]);
-            sell1 = Math.max(sell1, buy1 + prices[i]);
-            buy2 = Math.max(buy2, sell1 - prices[i]);
-            sell2 = Math.max(sell2, buy2 + prices[i]);
-        }
-        return sell2;
-    }
-}
-```
+ [121. 买卖股票的最佳时机.md](..\..\题\leetcode\121. 买卖股票的最佳时机.md) 
 
-## k次
 
-![alt text](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images/202408231648843.png)
-```java
-// 188. 买卖股票的最佳时机 IV
-class Solution {
-    public int maxProfit(int k, int[] prices) {
-        int[] buy = new int[k];
-        Arrays.fill(buy, -prices[0]);
-        int[] sell = new int[k];
-        Arrays.fill(sell, 0);
-        for (int i = 1; i < prices.length; i++) {
-            for (int j = 0; j < k; j++) {
-                if(j == 0){
-                    buy[j] = Math.max(buy[j], -prices[i]);
-                }
-                else{
-                    buy[j] = Math.max(buy[j], sell[j - 1] - prices[i]);
-                }
-                sell[j] = Math.max(sell[j], buy[j] + prices[i]);
-            }
-        }
-        return sell[k - 1];
-    }
-}
-```
+
+
+
+> 动态规划：你最多可以完成 **两笔** 交易。你不能同时参与多笔交易（你必须在再次购买前出售掉之前的股票）
+
+ [123. 买卖股票的最佳时机 III.md](..\..\题\leetcode\123. 买卖股票的最佳时机 III.md) : 两次
+
+ [188. 买卖股票的最佳时机 IV.md](..\..\题\leetcode\188. 买卖股票的最佳时机 IV.md) ：k次
+
+
+
 ## 多次+手续费
 ![alt text](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images/202408231648844.png)
 ```java
