--- a/docs/基础/字符串/题.md
+++ b/docs/基础/字符串/题.md
@@ -1,3 +1,29 @@
  [395. 至少有 K 个重复字符的最长子串.md](..\..\题\leetcode\395. 至少有 K 个重复字符的最长子串.md) 
 
 一直删除相邻重复字符： [小米25模拟字符串操作.md](..\..\题\笔试\真题\小米25模拟字符串操作.md) 
+
+
+
+
+
+ [14. 最长公共前缀.md](..\..\题\leetcode\14. 最长公共前缀.md) ：多个字符串，easy
+
+
+
+## 滑动窗口
+
+能用滑动窗口解决的，必是【连续子序列】
+
+ [3. 无重复字符的最长子串.md](..\..\题\leetcode\3. 无重复字符的最长子串.md) ：滑动窗口、hashmap。
+
+ [438. 找到字符串中所有字母异位词.md](..\..\题\leetcode\438. 找到字符串中所有字母异位词.md) ：滑动窗口、字符数组。
+
+ [76.最小覆盖子串.md](..\..\题\leetcode\76.最小覆盖子串.md) ：滑动数组、字符数组 【hard】
+
+## 回文串
+
+ [5.最长回文子串.md](..\..\题\leetcode\5.最长回文子串.md) ：单个和双个 
+
+## 脑筋
+
+[459. 重复的子字符串.md](..\..\题\leetcode\459. 重复的子字符串.md) ：KMP
