--- a/docs/基础/排序/排序.md
+++ b/docs/基础/排序/排序.md
@@ -85,15 +85,16 @@ private void swap(int[] nums, int i, int j){
 
 基数：从低位到高位进行计数排序，基数作计数。
 
-| 算法 |    最好    |    最坏    |    平均    |  空间   | 稳定 | 思想 |          注意事项          |      速度      |         优化          |
-| :--: | :--------: | :--------: | :--------: | :-----: | :--: | :--: | :------------------------: | :------------: | :-------------------: |
-| 冒泡 |    O(n)    |  O($n^2$)  |  O($n^2$)  |  原地   |  Y   |      |  最好需要优化 + 已经有序   |      超时      | x记录最后一次交换位置 |
-| 选择 |  O($n^2$)  |  O($n^2$)  |  O($n^2$)  |  原地   |  N   |      |    交换次数一般少于冒泡    |      超时      |                       |
-|  堆  | O($nlogn$) | O($nlogn$) | O($nlogn$) |  原地   |  N   |      |                            |       快       |      非递归下潜       |
-| 插入 |    O(n)    |  O($n^2$)  |  O($n^2$)  |  原地   |  Y   |      |       最好是已经有序       |      巨慢      |   优化就是希尔排序    |
-| 希尔 |  O(nlogn)  |  O($n^2$)  | O($nlogn$) |  原地   |  N   |      |                            |  比堆排序还快  |                       |
-| 归并 | O($nlogn$) | O($nlogn$) | O($nlogn$) |  O(n)   |  Y   |      |       额外的O(n)空间       | 比希尔排序还快 |                       |
-| 快速 | O($nlogn$) |  O($n^2$)  | O($nlogn$) | O(logn) |  N   |      | 枢轴值随机化来缓解最坏情况 |      巨慢      |                       |
+| 算法 |    最好    |    最坏    |    平均    |  空间   | 稳定  | 思想 |          注意事项          |      速度      |         优化          |
+| :--: | :--------: | :--------: | :--------: | :-----: | :---: | :--: | :------------------------: | :------------: | :-------------------: |
+| 冒泡 |    O(n)    |  O($n^2$)  |  O($n^2$)  |  原地   | **Y** |      |  最好需要优化 + 已经有序   |      超时      | x记录最后一次交换位置 |
+| 选择 |  O($n^2$)  |  O($n^2$)  |  O($n^2$)  |  原地   |   N   |      |    交换次数一般少于冒泡    |      超时      |                       |
+| 插入 |    O(n)    |  O($n^2$)  |  O($n^2$)  |  原地   | **Y** |      |       最好是已经有序       |      巨慢      |   优化就是希尔排序    |
+| 希尔 |  O(nlogn)  |  O($n^2$)  | O($nlogn$) |  原地   |   N   |      |                            |  比堆排序还快  |                       |
+| 归并 | O($nlogn$) | O($nlogn$) | O($nlogn$) |  O(n)   | **Y** |      |       额外的O(n)空间       | 比希尔排序还快 |                       |
+| 快速 | O($nlogn$) |  O($n^2$)  | O($nlogn$) | O(logn) |   N   |      | 枢轴值随机化来缓解最坏情况 |      巨慢      |                       |
+|  堆  | O($nlogn$) | O($nlogn$) | O($nlogn$) |  原地   |   N   |      |                            |       快       |      非递归下潜       |
+
 
 
 
