--- a/docs/基础/数学/异或.md
+++ b/docs/基础/数学/异或.md
@@ -65,3 +65,7 @@ private void swap(int[] nums, int i, int j){
 ​	那么，a^b^(1位数) = a or b，a^b^(a or b) = b or a
 
 ​	PS: 如何提最右边1 `x & (~x + 1)`
+
+## 实现加法
+
+ [371. 两整数之和.md](..\..\题\leetcode\371. 两整数之和.md) ：异或（无进位加法）和与（进位） 来实现加法（有进位加法）。
