--- a/docs/基础/链表/链表.md
+++ b/docs/基础/链表/链表.md
@@ -55,14 +55,33 @@ while(cur != null){
 
 ### 创造链表
 
+尾插
+
 ```java
 ListNode sentinel = new ListNode(0);
 ListNode cur = sentinel;
 for(int i=0;i<nums.length;i++){
-    cur.next = new ListNode(i);
+    cur.next = new ListNode(nums[i]);
     cur = cur.next;
 }
 return sentinel.next;
+```
+
+头插
+
+```java
+ListNode sentinel = new ListNode(0);
+for(int i=0;i<nums.length;i++){
+    sentinel.next = new ListNode(nums[i], sentinel.next);
+}
+return sentinel.next;
+
+
+ListNode head = null;
+for(int i=0;i<nums.length;i++){
+    head = new ListNode(nums[i], head);
+}
+return head;
 ```
 
 
@@ -126,6 +145,8 @@ class Solution {
 }
 ```
 
+ [876. 链表的中间结点.md](..\..\题\leetcode\876. 链表的中间结点.md) 
+
 如果想返回中间和中间偏左，那么造一个dummy，中间→中间偏左，中间偏右→中间。
 
 ```java
@@ -148,8 +169,6 @@ class Solution {
 }
 ```
 
-
-
 ### 🚀反转链表
 
 ```java
@@ -159,16 +178,31 @@ class Solution {
         if(head == null){
             return head;
         }
-
-        // 递归退出
+        // 递归退出，最后一个递归是最后一个节点
         if(head.next == null){
             return head;
         }
-        ListNode h = reverseList(head.next);
-        head.next.next = head;
-        // !!! 防止循环
-        head.next = null;
-        return h;
+        ListNode last = reverseList(head.next);	// 当前是head 2，下一个节点是head.next 3
+        head.next.next = head;		// 让下一个节点指向自己
+        head.next = null;			// 断开原来的链接，防止循环
+        return last;					// 返回的是最后一个节点 3
+    }
+}
+
+class Solution {
+    public ListNode reverseList(ListNode head) {
+        ListNode pre = null;
+        ListNode cur = head;
+        // 遍历节点
+        while(cur != null){
+            // 保存
+            ListNode next = cur.next;
+            // pre <- next
+            cur.next = pre;
+            pre = cur;
+            cur = next;
+        }
+        return pre;
     }
 }
 ```
@@ -189,20 +223,24 @@ class Solution {
 
 ​	[82. 删除排序链表中的重复元素 II.md](..\..\题\leetcode\82. 删除排序链表中的重复元素 II.md) ：pre cur cur.next
 
+​	237 [203. 移除链表元素.md](..\..\题\leetcode\203. 移除链表元素.md) 
+
 相交
 
 [	160. 相交链表.md](..\..\题\leetcode\160. 相交链表.md) 
 
 环
 
-​	 [141. 环形链表.md](..\..\题\leetcode\141. 环形链表.md) 
+​	 [141. 环形链表.md](..\..\题\leetcode\141. 环形链表.md)  [142. 环形链表 II.md](..\..\题\leetcode\142. 环形链表 II.md) 
 
-
-
-
+​	 [获取倒n.md](..\..\题\leetcode\获取倒n.md) [19. 删除链表的倒数第 N 个结点.md](..\..\题\leetcode\19. 删除链表的倒数第 N 个结点.md) 
 
 链表进位：
 
-​	 [2. 两数求和.md](..\..\题\leetcode\2. 两数求和.md) ：逆序
+​	 [2. 两数求和.md](..\..\题\leetcode\2. 两数求和.md) ：**逆序**（进位往右，链表左对齐） 
 
-​	
+​	[445. 两数相加 II.md](..\..\题\leetcode\445. 两数相加 II.md) : 顺序（进位往左，链表右对齐）
+
+回文：
+
+​	 [234. 回文链表.md](..\..\题\leetcode\234. 回文链表.md) 
