--- a/docs/背/八股/八股.md
+++ b/docs/背/八股/八股.md
@@ -1,8 +1,4 @@
-- [红黑树的红黑规则](#红黑树的红黑规则)
-- [红黑树添加节点](#红黑树添加节点)
-- [【排序算法】](#排序算法)
-- [什么叫做排序算法的稳定性](#什么叫做排序算法的稳定性)
-- [二分查找的复杂度](#二分查找的复杂度)
+[toc]
 
 
 ---
