--- a/docs/题/leetcode/2. 两数求和.md
+++ b/docs/题/leetcode/2. 两数求和.md
@@ -1,25 +1,37 @@
-它们每位数字都是按照 **逆序** 的方式存储的，并且每个节点只能存储 **一位** 数字，这两个数都不会以 0 开头。
+它们每位数字都是按照 **逆序**（进位往后，左对齐） 的方式存储的，并且每个节点只能存储 **一位** 数字，这两个数都不会以 0 开头。
 
 ```java
 class Solution {
     public ListNode addTwoNumbers(ListNode l1, ListNode l2) {
-        ListNode ans = new ListNode(-1), temp = ans;
-        int t = 0;
-        while (l1 != null || l2 != null || t != 0) {
+        ListNode dummy = new ListNode(-1), cur = dummy;
+        int carry = 0;
+        while (l1 != null || l2 != null || carry != 0) {
             if (l1 != null) {
-                t += l1.val;
+                carry += l1.val;
                 l1 = l1.next;
             }
             if (l2 != null) {
-                t += l2.val;
+                carry += l2.val;
                 l2 = l2.next;
             }
-            temp.next = new ListNode(t % 10);
-            temp = temp.next;
-            t /= 10;
+            // 尾插
+            cur.next = new ListNode(carry % 10);
+            cur = cur.next;
+            carry /= 10;
         }
-        return ans.next;
+        return dummy.next;
     }
 }
 ```
 
+```
+输入
+l1 = [2,4]
+l2 = [5,6,4]
+输出
+	 [7,0,5]	
+```
+
+不是42+465！
+
+4+6的进位是在l2后面的4上，而不是5上
