--- a/docs/题/leetcode/543. 二叉树的直径.md
+++ b/docs/题/leetcode/543. 二叉树的直径.md
@@ -1,34 +1,34 @@
-![image-20240619145002399](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images/202406191450659.png)
+> 两节点之间**路径**的长度由它们之间**边数**表示。
+> 
+> 二叉树的 **直径** 是指树中任意两个节点之间最长路径的 长度 。这条路径可能经过也可能不经过根节点 root 。
 
-[543. 二叉树的直径 - 力扣（LeetCode）](https://leetcode.cn/problems/diameter-of-binary-tree/solutions/139683/er-cha-shu-de-zhi-jing-by-leetcode-solution/?envType=study-plan-v2&envId=top-100-liked)
 
+直径 = 左节点个数 + 右节点个数:
 
+    假设我们知道对于该节点的左儿子向下遍历经过最多的节点数 L （即以左儿子为根的子树的深度） 和其右儿子向下遍历经过最多的节点数 R （即以右儿子为根的子树的深度），那么以该节点为起点的路径经过节点数的最大值即为 L+R+1 。
 
-任意一条路的长度，径均可以被看作由某个节点为起点，从其左儿子和右儿子向下遍历的路径拼接得到。
-
-而从父节点到某个孩子的叶子的路径 [2,4,9]的长度为2，等同于某个孩子的深度 [4]的深度为2.
-
-最长路径，即左右深度和。
+    我们记节点 node 为起点的路径经过节点数的最大值为 d_node，那么二叉树的直径就是所有节点 d_node 的最大值减一，即 L+R+1-1 = L+R
 
 ```java
-// 543. 二叉树的直径
 class Solution {
-    int ans = 0;
+    int res = 0;
     public int diameterOfBinaryTree(TreeNode root) {
-        maxDepth(root);
-        return ans;
+        dfs(root);
+        return res;
     }
 
-    public int maxDepth(TreeNode root) {
+    // dfs 返回的是 节点个数：空节点是0，叶子节点是1，一般节点是max(左,右) + 自身1.
+    // res 更新是直径，直径 = 左节点个数 + 右节点个数。
+    public int dfs(TreeNode root){
         if(root == null){
             return 0;
         }
-        int leftDepth = maxDepth(root.left);
-        int rightDepth = maxDepth(root.right);
-        // 更新最长路径
-        ans = Math.max(ans, leftDepth + rightDepth);
-        // 最大的左右孩子的深度，再加上自身
-        return Math.max(leftDepth, rightDepth) + 1;
+
+        int left = dfs(root.left);
+        int right = dfs(root.right);
+
+        res = Math.max(res, left + right);
+        return Math.max(left, right) + 1;
     }
 }
 ```
